kubernetes/deployments/core/rook-ceph/rook-ceph/cluster/ingress.yaml
# yaml-language-server none
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-cluster
  namespace: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
spec:
  ingressClassName: external
  rules:
  - host: &host "rook.${SECRET_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph
            port:
              number: 80
  tls:
  - hosts:
    - *host
